--- a/MatchMaker.Core/Model/touchdb.tt
+++ b/MatchMaker.Core/Model/touchdb.tt
@@ -3,7 +3,7 @@
 <#@ include file="EF.Utility.CS.ttinclude"#><#@ 
  output extension=".cs"#><#
 
-const string inputFile = @"C:\Users\omarg\Documents\GitHub\MatchMaker\MatchMaker.Infrastructure\Data\Touchdb.edmx";
+const string inputFile = @"C:\Users\dinoa\Documents\GitHub\app-matchmaker\MatchMaker.Infrastructure\Data\Touchdb.edmx";
 
 var textTransform = DynamicTextTransformation.Create(this);
 var code = new CodeGenerationTools(this);
